3.6.0: The living March
- Spirit Codex readability overhaul: plain-language entries, how-to steps on the
  item pages, clickable links, fluids in scenes.
- Gear: costly catalyst ranks with far stronger Manifested gear and set bonuses;
  a Pulse cell seated in every piece (spent first, upgradable); voice glow.
- Station UI polish; Wind Snare, Ward Drum, Tide Pump, Seal Loom repainted.
- Gate Rite: the Gate Drum needs no Pulse; beat out one of six original drum
  tracks on A/S/D/F (60% to open), synced to the music.
- March: 27 new structures; six trees with their own wood sets, including
  100+ block Weeping Colossi in groves (WillowGroveStructure); March building
  set; lakes, water and cave decoration; Glimmerfin, Drift Bells, Veil Rays,
  Silt Eels, Loom Swifts and client-only insects; daylight spawns, bigger
  packs, night empowerment and Elites.
- Companions like wolves: food taming and healing, bonded young, a stat panel,
  line breeding up to the Exalted tier.
- One-time March retrogen for older saves (worldgen 3).
- Verification: 217 GameTests; the March survey now checks trees, structures,
  spawn rules per biome and water/cave decoration.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>